# midas

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  logging.conf.json  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-app.yml
src/: loggers.py  services.py
src/db/: __init__.py  migrate.py  seed.py
src/db/migrations/: env.py
src/db/schema/: __init__.py  goal.py  transaction.py  user.py
src/db/schemas/: __init__.py  account.py  currency.py  event.py  goal.py  storage.py  transaction.py  transaction_type.py  user.py
src/db/seeds/: currencies.py  transaction_types.py
src/midas/: loggers.py  services.py
src/midas/db/: __init__.py  migrate.py  seed.py
src/midas/query/: generic_repository.py  session.py
src/midas/service/: abstract_notifier.py  user_caching.py
src/midas/usecase/: abstract_usecase.py
src/midas/util/: enums.py
src/platform/telegram/: routers.py
src/query/: __init__.py  generic_repository.py  repository.py  session.py
src/query/account/: __init__.py  repository.py
src/query/interface/: eager_loadable.py
src/query/storage/: __init__.py  repository.py
src/query/transaction/: __init__.py  repository.py
src/query/user/: __init__.py  repository.py
src/service/: user_caching.py
src/usecase/: abstract_usecase.py
src/usecase/storage/: __init__.py  get_user_storage_usecase.py
src/util/: enums.py  errors.py
test/: conftest.py
test/query/: repository_test.py
test/usecase/: conftest.py
(+153 files in other folders)
