[project]
name = "midas"
version = "0.1.1"
description = "Financial tracker on Telegram"
authors = [
    {name = "Artiom Astashonak",email = "artiomastashonak@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.13.7,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
black = ">=26.1.0,<27.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
aiosqlite = ">=0.22.1,<0.23.0"

[tool.poetry.scripts]
migrate = "midas.db.migrate:main"
seed = "midas.db.seed:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
